[project]
name = "nonebot-plugin-doroending"
version = "0.1.0"
description = "获取今日的doro结局"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{name = "踏水寻", email = "1264405841@qq.com"}]
dependencies = [
    "nonebot2>=2.4.0",
    "nonebot-adapter-onebot>=2.4.0",
    "aiohttp>=3.13.0",
    "anyio>=4.0.0",
    "pydantic>=2.0.0",
]

[project.entry-points."nonebot.plugin"]
doroending = "nonebot_plugin_doroending"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"